# rules_boost

./: .gitignore  .travis.yml  BUILD  BUILD.bazel  BUILD.boost  BUILD.bzip2  BUILD.libbacktrace  BUILD.lzma  BUILD.zlib  BUILD.zstd  CODE_OF_CONDUCT.md  First  MODULE.bazel  README.md  Trader  WORKSPACE  boost.BUILD  bzip2.BUILD  config.lzma-android.h  config.lzma-ios-arm64.h  config.lzma-ios-armv7.h  config.lzma-ios-i386.h  config.lzma-linux-aarch64.h  config.lzma-linux.h  config.lzma-osx-arm64.h  config.lzma-osx-x86_64.h  config.lzma-osx.h  config.lzma-windows.h  extensions.bzl  lzma.BUILD  renovate.json5  update_lzma_config_header.sh  zlib.BUILD  zlib.patch  zstd.BUILD
.bazelci/: presubmit.yml
.circleci/: config.yaml  config.yml
boost/: boost.bzl  patch.6e14ca24dab50ad4c1fa8c27c7dd6f1cb791b534  repositories.bzl
configure/: configure.bzl
py/: README.md  python_configure.bzl
src/: BUILD  build_asio.cpp  build_asio_ssl.cpp  build_beast.cpp
test/: .bazelrc  .bazelrc.ci  .bazelrc.circle  BUILD  BUILD.bazel  MODULE.bazel  MODULE.bzl  WORKSPACE  WORKSPACE.bazel  accumulators_test.cc  any_test.cc  array_test.cc  asio_ssl_test.cc  asio_test.cc  assign_test.cc  beast_test.cc  bimap_test.cc  bind_test.cc  callable_traits_test.cc  circular_buffer_test.cc  compute_test.cc  container_hash_test.cc  container_test.cc  context_test.cc  coroutine2_test.cc  coroutine_test.cc  crc_test.cc  date_time_test.cc  dynamic_bitset_test.cc  endian.cc  exception_test.cc  fiber_test.cc  filesystem_test.cc  flyweight_test.cc  foreach_test.cc  format_test.cc  fusion_test.cc  geometry_test.cc  gil_test.cc  graph_test.cc  (+53 more)
