exports_files([
    "config.lzma-android.h",
    "config.lzma-linux.h",
    "config.lzma-osx-arm64.h",
    "config.lzma-osx-x86_64.h",
    "config.lzma-ios-arm64.h",
    "config.lzma-ios-armv7.h",
    "config.lzma-ios-i386.h",
    "config.lzma-windows.h",
])

alias(
    name = "algorithm",
    actual = "@boost//:algorithm",
    visibility = ["//visibility:public"],
)

alias(
    name = "filesystem",
    actual = "@boost//:filesystem",
    visibility = ["//visibility:public"],
)

alias(
    name = "log",
    actual = "@boost//:log",
    visibility = ["//visibility:public"],
)
