load("//:boost/boost.bzl", "create_aliases")

exports_files([
    "config.lzma-android.h",
    "config.lzma-linux.h",
    "config.lzma-linux-aarch64.h",
    "config.lzma-osx-arm64.h",
    "config.lzma-osx-x86_64.h",
    "config.lzma-ios-arm64.h",
    "config.lzma-ios-armv7.h",
    "config.lzma-ios-i386.h",
    "config.lzma-windows.h",
])

# List of targets for which to create aliases
targets = [
    "context",
    "fiber",
    "pool",
    "accumulators",
    "algorithm",
    "align",
    "any",
    "assign",
    "atomic",
    "archive",
    "array",
    "asio",
    "assert",
    "beast",
    "bimap",
    "bind",
    "callable_traits",
    "call_traits",
    "cerrno",
    "checked_delete",
    "chrono",
    "circular_buffer",
    "compute",
    "concept_archetype",
    "concept_check",
    "config",
    "concept",
    "container",
    "container_hash",
    "conversion",
    "core",
    "coroutine",
    "coroutine2",
    "crc",
    "cstdint",
    "current_function",
    "date_time",
    "detail",
    "describe",
    "dll",
    "dynamic_bitset",
    "enable_shared_from_this",
    "endian",
    "exception",
    "exception_ptr",
    "filesystem",
    "flyweight",
    "foreach",
    "format",
    "function",
    "function_types",
    "functional",
    "fusion",
    "geometry",
    "gil",
    "property_tree",
    "get_pointer",
    "heap",
    "icl",
    "implicit_cast",
    "is_placeholder",
    "integer",
    "interprocess",
    "iterator",
    "intrusive",
    "io",
    "iostreams",
    "lexical_cast",
    "limits",
    "locale",
    "lockfree",
    "math",
    "mem_fn",
    "move",
    "mp11",
    "mpl",
    "hana",
    "msm",
    "multi_index",
    "multiprecision",
    "nowide",
    "noncopyable",
    "none",
    "numeric_conversion",
    "numeric_ublas",
    "numeric_odeint",
    "multi_array",
    "units",
    "operators",
    "optional",
    "outcome",
    "parameter",
    "polygon",
    "predef",
    "preprocessor",
    "process",
    "program_options",
    "ptr_container",
    "qvm",
    "random",
    "range",
    "ratio",
    "rational",
    "ref",
    "regex",
    "safe_numerics",
    "scope_exit",
    "scoped_array",
    "scoped_ptr",
    "shared_ptr",
    "shared_array",
    "signals2",
    "serialization",
    "smart_ptr",
    "spirit",
    "stacktrace",
    "static_assert",
    "static_string",
    "stl_interfaces",
    "system",
    "swap",
    "throw_exception",
    "thread",
    "tokenizer",
    "tribool",
    "tti",
    "type",
    "type_index",
    "type_traits",
    "typeof",
    "tuple",
    "unordered",
    "utility",
    "uuid",
    "variant",
    "variant2",
    "visit_each",
    "vmd",
    "timer",
    "numeric_interval",
    "test",
    "test.a",
    "proto",
    "phoenix",
    "log",
    "statechart",
    "winapi",
    "xpressive",
    "property_map",
    "graph",
    "lambda",
    "lambda2",
    "sort",
    "contract",
    "json",
    "leaf",
    "pfr",
    "histogram",
    "poly_collection",
    "type_erasure",
    "url",
    "test.so",  # Note - This target is a boost_so_library()
]

# Call the macro with the list of targets to generate the aliases
create_aliases(
    alias_target = "@boost",
    target_list = targets,
)
