module(name = "com_github_nelhage_rules_boost")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "bzip2", version = "1.0.8", repo_name = "org_bzip_bzip2")
bazel_dep(name = "zlib", version = "1.3.1")
bazel_dep(name = "zstd", version = "1.5.6", repo_name = "com_github_facebook_zstd")
bazel_dep(name = "xz", version = "5.4.5", repo_name = "org_lzma_lzma")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# We're pointing at hedronvision's mirror of google/boringssl:master-with-bazel to get Renovate auto-update. Otherwise, Renovate will keep moving us back to master, which doesn't support Bazel. See https://github.com/renovatebot/renovate/discussions/24854

http_archive(
    name = "openssl",
    url = "https://github.com/hedronvision/boringssl/archive/1f43cd75dd0c5e05a27c493926bcb4362ef3c2da.tar.gz",
    sha256 = "5cfda276102659cbd2ab2e43a1af075b86723ac7032db9e9c86ce5035e52a73f",
    strip_prefix = "boringssl-1f43cd75dd0c5e05a27c493926bcb4362ef3c2da",
)
