module(name = "com_github_nelhage_rules_boost")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "bzip2", version = "1.0.8", repo_name = "org_bzip_bzip2")
bazel_dep(name = "zlib", version = "1.3.1")
bazel_dep(name = "zstd", version = "1.5.6", repo_name = "com_github_facebook_zstd")
bazel_dep(name = "xz", version = "5.4.5", repo_name = "org_lzma_lzma")
bazel_dep(name = "boringssl", version = "0.0.0-20240126-22d349c", repo_name = "openssl")
